vlib/v/checker/tests/var_used_reserved_word.vv
fn main() {
    mut array := []int{}
	array << 11
    println(array)

	string := 22
	println(string)
}
